--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-Arraste o link abaixo para a barra dos favoritos
+Arraste o link abaixo para a barra dos favoritos e clique nele quando quiser ler uma noticia
 <br><BR>
-<a href="javascript:eval(unescape('window.location.href=%5C%22Http:%5C/%5C/leiaisso.net%5C/%5C%22+window.location.href'));void(0)>LEIA ISSO.net</a>
+<a href="javascript:eval(unescape('window.location.href=%5C%22Http:%5C/%5C/leiaisso.net%5C/%5C%22+window.location.href'));void(0)>LEIA ISSO</a>
